--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
