--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2",
-    "vuetify": "^2.4.0"
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
