--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.4.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
