--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.4.0",
