--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2",
     "vuetify": "^2.4.0",
-    "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
